--- a/app/views/about.xml
+++ b/app/views/about.xml
@@ -10,9 +10,9 @@
 				<ImageView id='twitter'/>
 			</View>
 			<Label id='meet'/>
-			<TableView id='teamTable' dataCollection='team' dataTransform='addHeaders'>
+			<!--<TableView id='teamTable' dataCollection='team' dataTransform='addHeaders'>
 				<Require src='teamRow' id='row'/>
-			</TableView>
+		</TableView>-->
 		</ScrollView>
 	</View>
 </Alloy>
