editNavBar is being used on widget instead of customer bars each page, theme switching implemented, only the index/frontpage needs to be down.

--- a/app/views/settings.xml
+++ b/app/views/settings.xml
@@ -1,7 +1,7 @@
 <Alloy>
 	<View id='container'>
 		<TableView id='settingsTable'>
-			<TableViewRow id='notificationRow'>
+			<TableViewRow id='notificationsRow'>
 				<Label id='pushNotificationsLabel'/>
 				<Switch id="pushNotificationsSwitch"/>
 			</TableViewRow>
