--- a/app/views/frontPage.xml
+++ b/app/views/frontPage.xml
@@ -1,7 +1,10 @@
 <Alloy>
 	<View id='mainView'>
-		<TableView id='reviewTable'>
-			
+		<!--NEWSFEED WILL GO HERE-->
+		<ImageView id='tempImageView'/>
+		<!--OHYESITWILL-->
+		<TableView id='postTable'>
+			<!--TableViewRow id='postRow' dataCollection='posts' dataTransform='DOINEEDTHIS?'-->
 		</TableView>
 	</View>
 </Alloy>
